Basic reporting is working, now complains about the most evil functions

--- a/parsets.cabal
+++ b/parsets.cabal
@@ -25,5 +25,7 @@ executable parsets
                    Language.TorqueScript.Tokenizer
                    Language.TorqueScript.Parser
                    Language.TorqueScript.Analysis
+                   Language.TorqueScript.Rules
+                   Language.TorqueScript
 
 
