--- a/parsets.cabal
+++ b/parsets.cabal
@@ -13,7 +13,10 @@ executable parsets
     build-depends: base >=4.7 && <4.8,
                    parsec >=3.1.9 && <3.2,
                    text >=1.1 && <1.2,
-                   mtl >=2.1.3 && <2.2
+                   mtl >=2.1.3 && <2.2,
+                   aeson >=0.9 && <0.10,
+                   unordered-containers >=0.2.5 && <0.3,
+                   bytestring >=0.10.4 && <0.11
     main-is: Main.hs
     buildable: True
     default-language: Haskell2010
@@ -27,5 +30,3 @@ executable parsets
                    Language.TorqueScript.Analysis
                    Language.TorqueScript.Rules
                    Language.TorqueScript
-
-
