--- a/parsets.cabal
+++ b/parsets.cabal
@@ -22,6 +22,7 @@ executable parsets
     default-language: Haskell2010
     default-extensions: OverloadedStrings,
                         FlexibleInstances
+    ghc-options:   -Wall -Werror
     hs-source-dirs: src
     other-modules: Language.TorqueScript.AST
                    Language.TorqueScript.Tokens
