--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: haskell
 sudo: false
 ghc:
   - 7.8 # Current Haskell Platform
+install:
+  - cabal install --only-dependencies --enable-tests --jobs
 script:
   - cabal configure -fci && cabal build && cabal run -- BlocklandGlass
