--- a/parsets.cabal
+++ b/parsets.cabal
@@ -25,12 +25,15 @@ executable parsets
                    unordered-containers >=0.2.5 && <0.3,
                    bytestring >=0.10.4 && <0.11,
                    directory >=1.2.3 && <1.3,
-                   filepath >=1.4 && <1.5
+                   filepath >=1.4 && <1.5,
+                   blaze-html >=0.8 && <0.9,
+                   shakespeare >=2.0 && <2.1
     main-is: Main.hs
     buildable: True
     default-language: Haskell2010
     default-extensions: OverloadedStrings,
-                        FlexibleInstances
+                        FlexibleInstances,
+                        QuasiQuotes
     other-extensions:   CPP
     if flag(ci)
         ghc-options:   -Wall -Werror
@@ -46,3 +49,5 @@ executable parsets
                    Language.TorqueScript.Analysis
                    Language.TorqueScript.Rules
                    Language.TorqueScript
+                   Docs
+                   Lint
