Fixed the CI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ ghc:
   - 7.8 # Current Haskell Platform
 install:
   - cabal install --only-dependencies --enable-tests --jobs
+env:
+  - PARSETS_CMD=lint
+  - PARSETS_CMD=docs
 script:
   - cabal configure -fci -fdebug && cabal build
-  - cabal configure -fci && cabal build && cabal run -- BlocklandGlass
+  - cabal configure -fci && cabal build && cabal run $PARSETS_CMD BlocklandGlass
 notifications:
   webhooks: https://webhooks.gitter.im/e/3f5dda8eb78aa8cc9b00
