--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ sudo: false
 ghc:
   - 7.8 # Current Haskell Platform
 install:
-  - cabal install --only-dependencies --enable-tests --jobs
+  - test $COMPILER -eq ghcjs && cabal install ghcjs ghcjs-prim && ghcjs-boot || true
+  - cabal install --only-dependencies --enable-tests --jobs --$COMPILER
 env:
-  - PARSETS_CMD=lint
-  - PARSETS_CMD=docs
+  - PARSETS_CMD=lint COMPILER=ghc
+  - PARSETS_CMD=docs COMPILER=ghc
+  - PARSETS_CMD=docs COMPILER=ghcjs
 script:
-  - cabal configure -fci -fdebug && cabal build
-  - cabal configure -fci && cabal build && cabal run -- $PARSETS_CMD BlocklandGlass
+  - cabal configure -fci -fdebug --$COMPILER && cabal build
+  - cabal configure -fci --$COMPILER && cabal build && cabal run -- $PARSETS_CMD BlocklandGlass
 notifications:
   webhooks: https://webhooks.gitter.im/e/3f5dda8eb78aa8cc9b00
