--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false
 ghc:
   - 7.8 # Current Haskell Platform
 install:
+  - cabal update && cabal install cabal-install
   - test $COMPILER -eq ghcjs && cabal install ghcjs ghcjs-prim && ghcjs-boot || true
   - cabal install --only-dependencies --enable-tests --jobs --$COMPILER
 env:
