--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - export PATH=.cabal-sandbox/bin:$PATH
   - cabal sandbox init && cabal update && cabal install cabal-install
   - cabal --version
-  - test $COMPILER = ghcjs && cabal install ghcjs ghcjs-prim && ghcjs-boot || true
+  - test $COMPILER = ghcjs && git clone https://github.com/ghcjs/ghcjs.git && git clone https://github.com/ghcjs/ghcjs-prim.git && cabal install ./ghcjs ./ghcjs-prim && ghcjs-boot || true
   - cabal install --$COMPILER --only-dependencies --enable-tests --jobs
 env:
   - PARSETS_CMD=lint COMPILER=ghc
