--- a/parsets.cabal
+++ b/parsets.cabal
@@ -26,8 +26,7 @@ executable parsets
                    bytestring >=0.10.4 && <0.11,
                    directory >=1.2 && <1.3,
                    filepath >=1.3 && <1.5,
-                   blaze-html >=0.8 && <0.9,
-                   shakespeare >=2.0 && <2.1
+                   blaze-html >=0.8 && <0.9
     main-is: Main.hs
     buildable: True
     default-language: Haskell2010
