Added a command to dump all tokens

--- a/parsets.cabal
+++ b/parsets.cabal
@@ -50,3 +50,4 @@ executable parsets
                    Language.TorqueScript
                    Docs
                    Lint
+                   DumpTokens
