--- a/parsets.cabal
+++ b/parsets.cabal
@@ -16,15 +16,43 @@ flag debug
     description:   Extra debug output
     default:       False
 
-executable parsets
-    build-depends: base >=4.7 && <4.9,
+library
+    build-depends: base >=4.7 && <4.10,
                    parsec >=3.1.9 && <3.2,
                    text >=1.1 && <1.3,
                    mtl >=2.1.3 && <2.3,
-                   aeson >=0.8 && <0.11,
+                   blaze-html >=0.8 && <0.9
+    buildable: True
+    default-language: Haskell2010
+    default-extensions: OverloadedStrings,
+                        FlexibleInstances,
+                        QuasiQuotes
+    other-extensions:   CPP
+    if flag(ci)
+        ghc-options:   -Wall -Werror
+    else
+        ghc-options:   -Wall
+    if flag(debug)
+        cpp-options:   -DFLAG_DEBUG
+    hs-source-dirs: src
+    exposed-modules:  Language.TorqueScript.AST
+                      Language.TorqueScript.DocGen
+                      Language.TorqueScript.Tokens
+                      Language.TorqueScript.Tokenizer
+                      Language.TorqueScript.Parser
+                      Language.TorqueScript.Analysis
+                      Language.TorqueScript.Rules
+                      Language.TorqueScript
+
+executable parsets
+    build-depends: base >=4.7 && <4.10,
+                   parsec >=3.1.9 && <3.2,
+                   text >=1.1 && <1.3,
+                   mtl >=2.1.3 && <2.3,
+                   aeson >=0.8 && <1.1,
                    unordered-containers >=0.2.5 && <0.3,
                    bytestring >=0.10.4 && <0.11,
-                   directory >=1.2 && <1.3,
+                   directory >=1.2 && <1.4,
                    filepath >=1.3 && <1.5,
                    blaze-html >=0.8 && <0.9
     main-is: Main.hs
@@ -42,6 +70,7 @@ executable parsets
         cpp-options:   -DFLAG_DEBUG
     hs-source-dirs: src
     other-modules: Language.TorqueScript.AST
+                   Language.TorqueScript.DocGen
                    Language.TorqueScript.Tokens
                    Language.TorqueScript.Tokenizer
                    Language.TorqueScript.Parser
